@@ -1,5 +1,6 @@
 Revision history for App-Doh
 
+          - Made User class a model component and used DI
           - Implement dependency injection in components
           - ComponentLoading returns plain text 500 if Request->new fails
           - Added post_install and uninstall commands to CLI
